@@ -10,6 +10,7 @@
 * Added option to resource monitors to show cached and buffered memory as
     used.
 * Improved translations and design fix of ALSA volume control popup.
+* Made netstatus_icon_set_tooltips_enabled() work.
 
 0.10.0
 -------------------------------------------------------------------------
